yoshimi 1.5.5 rc3

2017-12-7 Will
* Made GUI Settings windows consistent.
* .xiy doctype changed to Yoshimi.
* GUI now shows .xiy parts with mid-blue text.
* Set version as 1.5.5 rc4.
2017-12-6 Will
* Implemented extended (.xiy) Instrument saves.
* Set version as 1.5.5 rc3.

2017-12-5 Will
* Reverted change in Cmake linker for tests.
  This may affect BSD so this availability will not
  be mentioned in notes for next release.
* Set version as 1.5.5 rc2.

2017-12-4 Will
* Bugfix: CLI program change not updating GUI.

2017-12-3 Will
* Set version as 1.5.5 rc1.

2017-12-2 Will
* Improved legato fade behaviour.
* BugFix: History not removing files when list full.

2017-11-30 Will
* BugFix: long standing silent legato note :)
  This is an interim solution needs improving.
* Further improvments to legato mode.
  Another old bug found (not fixed yet) :(
* Bugfix: Drum mode not clearing legato.

2017-11-29 Will
* BugFix: Channel switch not loading correctly.
* Added specific older X86 CMake build options.

2017-11-28 Will
* GUI legato mode turns red if drum mode.
* Master reset reloads the saved default state
  if it exists and is set in config.

2017-11-26 will
* Refined legato/keymode code.
* Part code cleanups.
* Minor optimisation for mono/legato renote.
* Removed redundant code from part NoteOn
  and VirKeyboardUI.

2017-11-25 Will
* Improved protection for channel switch.
* Implimented CC 68 - Legato pedal.
* BugFix: CC 68 brace in wrong place :(

2017-11-24 Will
* Channel switcher was activated by Ardour!
  Temporary fix in place.

2017-11-23 Will
* Improved internal message system.
  Now possible to send plain non-blocking
  messages, such as warnings, to CLI & GUI.
* Updated docs.
* Fixed regression. Mixer not updating :(

2017-11-22 Will
* Further refinements to history lists.
  Instruments now included.
* CLI instrument load can use '@' history.

2017-11-20 Will
* Improved GUI & CLI instrument saving.
* Updated docs.
* BugFix: Failed right click on bank window.
