@@ -1,10 +1,20 @@
-yoshimi 1.5.5 rc3
+yoshimi 1.5.5 rc5
+
+2017-12-8 Will
+* Resolved anomalies with new instrument type.
+  GUI name colour reverts to black when cleared.
+  GUI name colour updated on saves as well as loads.
+  Bank structure identifies .xiy if either/both there.
+  Bank entry instrument colours update.
+  Loading instruments always looks for .xiy first.
+* Set version as 1.5.5 rc5.
 
 2017-12-7 Will
 * Made GUI Settings windows consistent.
 * .xiy doctype changed to Yoshimi.
 * GUI now shows .xiy parts with mid-blue text.
 * Set version as 1.5.5 rc4.
+
 2017-12-6 Will
 * Implemented extended (.xiy) Instrument saves.
 * Set version as 1.5.5 rc3.
